--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.0.10
 atomicwrites==1.2.1
 attrs==18.2.0
 beautifulsoup4==4.6.0
@@ -11,27 +12,34 @@ Django==1.11.6
 django-cors-headers==2.1.0
 django-extensions==1.9.8
 Flask==1.0.3
+Flask-Migrate==2.5.2
+Flask-SQLAlchemy==2.4.0
 gunicorn==19.9.0
 html5lib==1.0.1
 idna==2.6
 itsdangerous==1.1.0
 Jinja2==2.10.1
 luhn==0.2.0
+Mako==1.0.11
 MarkupSafe==1.1.1
 more-itertools==4.3.0
 nameparser==0.5.6
 pdfminer.six==20181108
 pluggy==0.8.0
+psycopg2==2.8.2
 py==1.7.0
 pycryptodome==3.8.1
 pytest==3.8.2
 pytest-runner==4.2
+python-dateutil==2.8.0
+python-editor==1.0.4
 pytz==2019.1
 raven==6.4.0
 requests==2.20.0
 simplejson==3.16.0
 six==1.11.0
 sortedcontainers==2.1.0
+SQLAlchemy==1.3.4
 typing==3.6.6
 urllib3==1.22
 virtualenv==16.0.0
