--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,24 @@
+alembic==1.0.11
 certifi==2019.6.16
 chardet==3.0.4
 Click==7.0
 Flask==1.1.1
+Flask-Migrate==2.5.2
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.4.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
+Mako==1.0.14
 MarkupSafe==1.1.1
 pdfminer.six==20181108
-penn-course-timetable==1.0
+psycopg2-binary==2.8.3
 pycryptodome==3.8.2
+python-dateutil==2.8.0
+python-editor==1.0.4
 requests==2.22.0
 six==1.12.0
 sortedcontainers==2.1.0
+SQLAlchemy==1.3.5
 urllib3==1.25.3
 Werkzeug==0.15.5
