--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,14 @@ Flask==1.1.1
 Flask-Migrate==2.5.2
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.0
+gunicorn==19.9.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 Mako==1.0.14
 MarkupSafe==1.1.1
 pdfminer.six==20181108
+-e git+git@github.com:seyoungjkim/penn-course-timetable.git@9d926d1384931101d74d30a2e8ad0a911f7efca5#egg=penn_course_timetable
 psycopg2-binary==2.8.3
 pycryptodome==3.8.2
 python-dateutil==2.8.0
